<resources>
    <string name="app_name">GoalTracker</string>
    <string name="goal_statement">Goal Statement</string>
    <string name="add_event">enter event description</string>
    <string name="app_date">set date and time</string>
    <string name="save">Save</string>
    <string name="yourGoal">Your Goal</string>
    <string name="yourEvent">Your Event</string>
    <string name="selectedDateTime">selected dateTime</string>
    <string name="moto">here you can add \ngoal \nand view goals</string>
    <string name="create_story">create a new story</string>
    <string name="remove">remove</string>
    <string name="view_story">view all stories</string>
    <string name="set_date">schedule date</string>
    <string name="set_time">schedule time</string>
    <string name="timeRemaining">remaining time</string>
    <string name="ScheduledTime">scheduled time</string>
    <string name="notes_icon">notes icon</string>
    <string name="add_key_notes">add key notes</string>
</resources>
