<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
    android:layout_margin="5dp"
    android:id="@+id/EventCard"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#ff6a80"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/EventDes"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:hint="@string/yourEvent"
            android:textColor="@color/TextColor"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/ScheduledDate"
            android:layout_width="115dp"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/selectedDateTime"
            android:textColor="@color/TextColor"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EventDes">

        </TextView>

        <TextView
            android:id="@+id/ScheduledTime"
            android:layout_width="115dp"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:hint="@string/ScheduledTime"
            android:textColor="@color/TextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ScheduledDate"
            app:layout_constraintVertical_bias="1.0">

        </TextView>

        <TextView
            android:id="@+id/timeRemaining"
            android:layout_width="233dp"
            android:layout_height="135dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:hint="@string/timeRemaining"
            android:padding="5dp"
            android:textColor="@color/TextColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ScheduledDate"
            app:layout_constraintTop_toBottomOf="@+id/EventDes"
            app:layout_constraintVertical_bias="0.222">

        </TextView>

        <ImageView
            android:id="@+id/noteIcon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/notes_icon"
            android:src="@drawable/ic_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

