<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/darkBlue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/addEventDescription"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/add_event"
            android:importantForAutofill="no"
            android:textSize="30sp"
            android:inputType="textMultiLine"
            android:textColor="@color/TextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setDate"
            android:layout_width="194dp"
            android:layout_height="103dp"
            android:layout_below="@+id/addEventDescription"
            android:layout_marginTop="36dp"
            android:background="#FFFF"
            android:hint="@string/set_date"
            android:labelFor="@id/addEventDescription"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventDescription">

        </Button>


        <Button
            android:id="@+id/setTime"
            android:layout_width="202dp"
            android:layout_height="109dp"
            android:layout_below="@+id/addEventDescription"
            android:layout_marginTop="56dp"
            android:layout_toEndOf="@+id/setDate"
            android:background="#FFFF"
            android:hint="@string/set_time"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setDate">

        </Button>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_below="@id/addEventDescription"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/setTime"
            android:src="@drawable/ic_check"
            android:text="@string/remove"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

