<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">


    <EditText
        android:id="@+id/addGoalStatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/goal_statement"
        android:hint="@string/goal_statement"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:shadowRadius="@android:integer/config_mediumAnimTime"
        android:textAlignment="viewStart"
        android:textColor="@color/TextColor"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rEventList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addGoalStatement"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        android:padding="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventAdderButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="23dp"
        android:src="@drawable/ic_refresh"
        android:text="@string/save"
        android:theme="@style/AppTheme">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/eventAdderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sessionSaveButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="23dp"
        android:src="@drawable/ic_add"
        android:text="@string/add_event"
        android:theme="@style/AppTheme"
        app:fabSize="normal">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sessionSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:src="@drawable/ic_check"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        android:theme="@style/AppTheme">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</RelativeLayout>
